<resources>
    <string name="app_name">aSimpleControls</string>
    <string name="ni_hao_android">你好，安卓</string>
    <string name="learn_text_view_controls">学习TextView控件</string>
    <string name="ni_hao_text_view_controls">你好TextView控件</string>
    <string name="xml_set_24px">24px 属性设置</string>
    <string name="xml_set_24dp">24dp 属性设置</string>
    <string name="xml_set_24sp">24sp 属性设置</string>
    <string name="java_set_24sp">24sp java设置</string>
    <string name="java_set_text_color">java设置红色</string>
    <string name="xml_set_text_color">xml属性设置颜色</string>
    <string name="res_set_text_color">资源文件设置字体颜色</string>

    <string name="simple_calculator">简单计算器</string>
    <string name="cancel">CE</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="clear">C</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="reciprocal">1/x</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>

</resources>